# alosaimi-elearning

./: .env  .env.example  .pre-commit-config.yaml  README.md  deployment.md  development.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml
.githooks/: commit-msg
.github/: dependabot.yml
.github/workflows/: commit-compliance.yml  deploy-production.yml  deploy-staging.yml  generate-client.yml  lint-backend.yml  lint-frontend.yml  playwright.yml  smokeshow.yml  test-backend.yml  test-docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: utils.py
backend/app/alembic/versions/: 2025-12-21_init.py  2026-02-01_add_unique_constaint_on_phase_book_.py  2026-02-04_init.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: books.py  exams.py  lessons.py  login.py  phases.py  private.py  programs.py  questions.py  sessions.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: __init__.py  book.py  exam.py  exam_attempt.py  lesson.py  phase.py  program.py  question.py  session.py  session_event.py  user.py  utils.py
backend/app/models/: __init__.py  associations.py  book.py  common.py  exam.py  lesson.py  phase.py  program.py  question.py  session.py  session_event.py  user.py
backend/tests/: conftest.py
backend/tests/api/: test_deps.py
backend/tests/api/routes/: test_books.py  test_exams.py  test_lessons.py  test_login.py  test_phases.py  test_private.py  test_programs.py  test_questions.py  test_sessions.py  test_users.py
backend/tests/crud/: test_book.py  test_exam.py  test_exam_attempt.py  test_lesson.py  test_phase.py  test_program.py  test_question.py  test_session.py  test_session_event.py  test_user.py
backend/tests/models/: test_exam.py  test_program.py
backend/tests/utils/: book.py  exam.py  lesson.py  program.py  session.py  user.py  utils.py
frontend/: package-lock.json  package.json
frontend/admin/: .env.example  .gitignore  Dockerfile  (+5 more)
scripts/: generate-client.sh
(+100 files in other folders)
